# openclas

./: .gitignore  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  Makefile  README.md  build.py  clean.py
include/openclas/: common.hpp  dictionary.hpp  k_shortest_path.hpp  segment.hpp  serialization.hpp  utility.hpp  viterbi.hpp
python/: 1500.txt  CMakeLists.txt  openclas.py  pyopenclas.cpp  setup.py
scripts/: build.py  clean.py  fix_locale.py
src/: CMakeLists.txt  common.hpp  openclas_seg.cpp  openclas_segtag.cpp  openclas_test.cpp
tests/syscall/: wait.c
tests/wstring/: 3-codecvt_in_c++0x.cpp  4.locale-encode.cpp
unit_test/: CMakeLists.txt  unit_test.cpp  unit_test_dictionary.hpp  unit_test_k_shortest_path.hpp  unit_test_longtime.hpp  unit_test_segment.hpp  unit_test_serialization.hpp  unit_test_utility.hpp  unit_test_viterbi.hpp
